More complete JMX settings, with classloader handling and better SSL handling.