@@ -5,7 +5,7 @@ import java.io.StringReader;
 import java.io.UncheckedIOException;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.util.Collections;
+import java.security.NoSuchAlgorithmException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -13,11 +13,19 @@ import javax.management.InstanceNotFoundException;
 import javax.management.remote.JMXConnector;
 import javax.management.remote.JMXConnectorFactory;
 import javax.management.remote.JMXServiceURL;
+import javax.net.ssl.SSLContext;
+import javax.rmi.ssl.SslRMIClientSocketFactory;
 
+import org.apache.logging.log4j.Level;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.junit.After;
 import org.junit.Assert;
+import org.junit.Before;
+import org.junit.BeforeClass;
 import org.junit.Test;
 
+import loghub.LogUtils;
 import loghub.Tools;
 import loghub.configuration.Configuration;
 import loghub.configuration.Properties;
@@ -34,6 +42,7 @@ public class TestJmxConnection {
     }
     private static final String loopbackip = InetAddress.getLoopbackAddress().getHostAddress();
     private final int port = Tools.tryGetPort();
+    private SSLContext defaultSslContext;
 
     static {
         Map<String, String> env = new HashMap<>();
@@ -48,9 +57,22 @@ public class TestJmxConnection {
         System.getProperties().putAll(env);
     }
 
+    @BeforeClass
+    public static void configure() {
+        Tools.configure();
+        Logger logger = LogManager.getLogger();
+        LogUtils.setLevel(logger, Level.TRACE, "loghub");
+    }
+
+    @Before
+    public void saveSslContext() throws NoSuchAlgorithmException {
+        defaultSslContext = SSLContext.getDefault();
+    }
+
     @After
     public void stopJmx() {
         JmxService.stop();
+        SSLContext.setDefault(defaultSslContext);
     }
 
     @Test
@@ -71,15 +93,57 @@ public class TestJmxConnection {
         connect(loopbackip, hostip);
     }
 
+    @Test
+    public void loadConfLoopback() throws Exception {
+        String configStr = "jmx.port: " +  port + "\njmx.listen: \"127.0.0.1\" jmx.hostname: \"127.0.0.1\"";
+        StringReader reader = new StringReader(configStr);
+        Properties props = Configuration.parse(reader);
+        JmxService.start(props.jmxServiceConfiguration);
+        connect(loopbackip, hostip);
+    }
+
+    @Test
+    public void loadUrl() throws Exception {
+        String jmxUrl = String.format("service:jmx:rmi://127.0.0.1:%d/jndi/rmi://127.0.0.1:%d/jmxrmi", port, port);
+        String configStr = "jmx.hostname: \"127.0.0.1\" jmx.serviceUrl: \"" +  jmxUrl + "\"";
+        StringReader reader = new StringReader(configStr);
+        Properties props = Configuration.parse(reader);
+        JmxService.start(props.jmxServiceConfiguration);
+        connect(loopbackip, hostip);
+    }
+
+    @Test
+    public void loadSsl() throws Exception {
+        String sslParams = "{cipherSuites: [\"TLS_AES_256_GCM_SHA384\"], protocols: [\"TLSv1.3\"]}";
+        String p12store = Tools.class.getResource("/loghub.p12").getFile();
+        String sslContext = String.format("{name: \"TLSv1.3\", trusts: [\"%s\"]}", p12store);
+        String jmxUrl = String.format("service:jmx:rmi://127.0.0.1:%d/jndi/rmi://127.0.0.1:%d/jmxrmi", port, port);
+        String configStr = String.format("jmx.withSsl: true jmx.hostname: \"127.0.0.1\" jmx.serviceUrl: \"%s\" jmx.sslContext: %s jmx.sslParams: %s ssl.trusts: [\"%s\"] ssl.context: \"TLSv1.3\"",
+                jmxUrl, sslContext, sslParams, p12store);
+        StringReader reader = new StringReader(configStr);
+        Properties props = Configuration.parse(reader);
+        SSLContext.setDefault(props.ssl);
+        JmxService.start(props.jmxServiceConfiguration);
+        Map<String, Object> env = new HashMap<>();
+        env.put("com.sun.jndi.rmi.factory.socket", new SslRMIClientSocketFactory());
+
+        connect(loopbackip, hostip, env);
+    }
+
     private void connect(String ip1, String ip2) throws IOException, InstanceNotFoundException {
-        JMXServiceURL url = 
-                        new JMXServiceURL("service:jmx:rmi:///jndi/rmi://" + loopbackip + ":" + port + "/jmxrmi");
-        JMXConnector jmxc = JMXConnectorFactory.connect(url, Collections.emptyMap());
-        String cnxId = jmxc.getConnectionId();
-        Assert.assertTrue(cnxId.contains(ip1));
-        Assert.assertFalse(cnxId.contains(ip2));
-        Assert.assertNotNull(jmxc.getMBeanServerConnection().getObjectInstance(ExceptionsMBean.Implementation.NAME));
-        Assert.assertNotNull(jmxc.getMBeanServerConnection().getObjectInstance(StatsMBean.Implementation.NAME));
+        connect(ip1, ip2, Map.of());
+    }
+
+    private void connect(String ip1, String ip2, Map<String, Object> env) throws IOException, InstanceNotFoundException {
+        String jmxUrl = String.format("service:jmx:rmi:///jndi/rmi://%s:%d/jmxrmi",loopbackip, port);
+        JMXServiceURL url = new JMXServiceURL(jmxUrl);
+        try (JMXConnector jmxc = JMXConnectorFactory.connect(url, env)) {
+            String cnxId = jmxc.getConnectionId();
+            Assert.assertTrue(cnxId.contains(ip1));
+            Assert.assertFalse(cnxId.contains(ip2));
+            Assert.assertNotNull(jmxc.getMBeanServerConnection().getObjectInstance(ExceptionsMBean.Implementation.NAME));
+            Assert.assertNotNull(jmxc.getMBeanServerConnection().getObjectInstance(StatsMBean.Implementation.NAME));
+        }
     }
 
 }
